# SimpleGameFramework

./: .gitignore  CMakeLists.txt  README.md  Sources.txt  main
Examples/chess/: Chess.cpp  Chess.hpp  ChessScene.cpp  ChessScene.hpp
Examples/games/: BossScene.cpp  BossScene.hpp  GameOverScene.cpp  GameOverScene.hpp  JumpScene.cpp  JumpScene.hpp  MainMenuScene.cpp  MainMenuScene.hpp  Shared.hpp  tictactoeScene.cpp  tictactoeScene.hpp
Examples/tictactoe/: GameOverScene.cpp  GameOverScene.hpp  bot.cpp  bot.hpp  tictactoe.cpp  tictactoeScene.cpp  tictactoeScene.hpp
include/Engine/: Audio.hpp  Camera.hpp  Engine.hpp  Error.hpp  EventManager.hpp  Events.hpp  ObjectCollision.hpp  ObjectManager.hpp  Resolution.hpp  SceneManager.hpp  Time.hpp  Window.hpp
include/SGF/: Core.hpp  Gui.hpp  Input.hpp  Math.hpp
include/engine/: Audio.hpp  ObjectCollision.hpp  ObjectManager.hpp  Window.hpp
include/gui/: Color.hpp  Grid.hpp  Polygon.hpp  Rectangle.hpp  Text.hpp  Texture.hpp  Triangle.hpp
include/input/: Keyboard.hpp  Mouse.hpp
include/math/: Constants.hpp  Functions.hpp
src/: TestScene.cpp  TestScene.hpp  main.cpp  scene2.cpp  scene2.hpp
src/Engine/: Audio.cpp  Camera.cpp  Engine.cpp  Engine.hpp  Error.cpp  Error.hpp  EventManager.cpp  EventManager.hpp  ObjectCollision.cpp  ObjectCollision.hpp  ObjectManager.cpp  ObjectManager.hpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Time.cpp  Window.cpp  Window.hpp
src/SGF/: Core.hpp  Gui.hpp  Math.hpp
src/engine/: Audio.cpp  Camera.cpp  Error.cpp  EventManager.cpp  ObjectCollision.cpp  ObjectManager.cpp  SceneManager.cpp  Time.cpp  Window.cpp
src/gui/: Circle.cpp  Circle.hpp  Color.hpp  Grid.cpp  Grid.hpp  Polygon.cpp  Polygon.hpp  Rectangle.cpp  Rectangle.hpp  Text.cpp  Text.hpp  Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp  Triangle.cpp  Triangle.hpp
src/input/: Keyboard.cpp  Mouse.cpp  Mouse.hpp
src/math/: Constants.hpp  Functions.hpp  Random.cpp  Random.hpp  Vector.cpp  Vector.hpp
src/tictactoe/: GameOverScene.cpp  GameOverScene.hpp  main.cpp  tictactoeScene.cpp  tictactoeScene.hpp
